# g-interp

./: README.md  pyproject.toml
ginterp/: interp.py  mpi_shared_memory_interp.py
